browser/base/content/browser.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
:
root
{
-
-
panelui
-
subview
-
transition
-
duration
:
150ms
;
-
-
lwt
-
additional
-
images
:
none
;
-
-
lwt
-
background
-
alignment
:
right
top
;
-
-
lwt
-
background
-
tiling
:
no
-
repeat
;
}
:
root
:
-
moz
-
lwtheme
{
color
:
var
(
-
-
lwt
-
text
-
color
)
!
important
;
}
:
root
:
-
moz
-
lwtheme
{
background
-
color
:
var
(
-
-
lwt
-
accent
-
color
)
!
important
;
background
-
image
:
var
(
-
-
lwt
-
additional
-
images
)
!
important
;
background
-
position
:
var
(
-
-
lwt
-
background
-
alignment
)
!
important
;
background
-
repeat
:
var
(
-
-
lwt
-
background
-
tiling
)
!
important
;
}
:
root
:
-
moz
-
lwtheme
[
lwtheme
-
image
]
{
background
-
image
:
var
(
-
-
lwt
-
header
-
image
)
var
(
-
-
lwt
-
additional
-
images
)
!
important
;
}
:
root
:
-
moz
-
lwtheme
:
-
moz
-
window
-
inactive
{
background
-
color
:
var
(
-
-
lwt
-
accent
-
color
-
inactive
var
(
-
-
lwt
-
accent
-
color
)
)
!
important
;
}
#
main
-
window
:
not
(
[
chromehidden
~
=
"
toolbar
"
]
)
{
%
ifdef
XP_MACOSX
min
-
width
:
335px
;
%
else
min
-
width
:
300px
;
%
endif
}
#
main
-
window
[
customize
-
entered
]
{
min
-
width
:
-
moz
-
fit
-
content
;
}
searchbar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
search
/
search
.
xml
#
searchbar
"
)
;
}
/
*
Prevent
shrinking
the
page
content
to
0
height
and
width
*
/
.
browserStack
>
browser
{
min
-
height
:
25px
;
min
-
width
:
25px
;
}
.
browserStack
>
browser
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
browser
"
)
;
}
.
browserStack
>
browser
[
remote
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
remote
-
browser
"
)
;
}
toolbar
[
customizable
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
customizableui
/
toolbar
.
xml
#
toolbar
"
)
;
}
%
ifdef
XP_MACOSX
#
toolbar
-
menubar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
customizableui
/
toolbar
.
xml
#
toolbar
-
menubar
-
stub
"
)
;
}
%
endif
#
toolbar
-
menubar
[
autohide
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
customizableui
/
toolbar
.
xml
#
toolbar
-
menubar
-
autohide
"
)
;
}
panelmultiview
{
-
moz
-
box
-
align
:
start
;
}
panelmultiview
[
transitioning
]
{
pointer
-
events
:
none
;
}
panelview
{
-
moz
-
box
-
orient
:
vertical
;
}
panelview
:
not
(
[
visible
]
)
{
visibility
:
collapse
;
}
/
*
Hide
the
header
when
a
subview
is
reused
as
a
main
view
.
*
/
panelview
[
mainview
]
>
.
panel
-
header
{
display
:
none
;
}
.
panel
-
viewcontainer
{
overflow
:
hidden
;
}
.
panel
-
viewcontainer
[
panelopen
]
{
transition
-
property
:
height
;
transition
-
timing
-
function
:
var
(
-
-
animation
-
easing
-
function
)
;
transition
-
duration
:
var
(
-
-
panelui
-
subview
-
transition
-
duration
)
;
will
-
change
:
height
;
}
.
panel
-
viewcontainer
.
offscreen
{
position
:
absolute
;
}
.
panel
-
viewstack
{
overflow
:
visible
;
transition
:
height
var
(
-
-
panelui
-
subview
-
transition
-
duration
)
;
}
#
tabbrowser
-
tabs
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tabs
"
)
;
}
supports
-
moz
-
bool
-
pref
(
"
layout
.
css
.
emulate
-
moz
-
box
-
with
-
flex
"
)
{
#
tabbrowser
-
tabs
{
/
*
Without
this
the
tabs
container
width
extends
beyond
the
window
width
*
/
width
:
0
;
}
.
tab
-
stack
{
/
*
Without
this
pinned
tabs
get
a
bit
too
tall
when
the
tabstrip
overflows
.
*
/
vertical
-
align
:
top
;
}
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
:
not
(
[
hashiddentabs
]
)
~
#
alltabs
-
button
#
tabbrowser
-
tabs
[
hasadjacentnewtabbutton
]
:
not
(
[
overflow
=
"
true
"
]
)
~
#
new
-
tab
-
button
#
tabbrowser
-
tabs
[
overflow
=
"
true
"
]
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
tabbrowser
-
tabs
:
not
(
[
hasadjacentnewtabbutton
]
)
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
customizing
=
"
true
"
]
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
{
visibility
:
collapse
;
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
[
using
-
closing
-
tabs
-
spacer
]
~
#
alltabs
-
button
{
visibility
:
hidden
;
/
*
temporary
space
to
keep
a
tab
'
s
close
button
under
the
cursor
*
/
}
.
tabbrowser
-
tab
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tab
"
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
-
moz
-
box
-
flex
:
100
;
max
-
width
:
225px
;
min
-
width
:
var
(
-
-
tab
-
min
-
width
)
;
width
:
0
;
transition
:
min
-
width
100ms
ease
-
out
max
-
width
100ms
ease
-
out
;
}
:
root
[
uidensity
=
touch
]
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
/
*
Touch
mode
needs
additional
space
for
the
close
button
.
*
/
min
-
width
:
calc
(
var
(
-
-
tab
-
min
-
width
)
+
10px
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
:
not
(
[
fadein
]
)
{
max
-
width
:
0
.
1px
;
min
-
width
:
0
.
1px
;
visibility
:
hidden
;
}
.
tab
-
close
-
button
.
tabbrowser
-
tab
:
:
after
.
tab
-
background
{
/
*
Explicitly
set
the
visibility
to
override
the
value
(
collapsed
)
*
we
inherit
from
#
TabsToolbar
[
collapsed
]
upon
opening
a
browser
window
.
*
/
visibility
:
visible
;
}
.
tab
-
close
-
button
[
fadein
]
.
tabbrowser
-
tab
[
fadein
]
:
:
after
.
tab
-
background
[
fadein
]
{
/
*
This
transition
is
only
wanted
for
opening
tabs
.
*
/
transition
:
visibility
0ms
25ms
;
}
.
tab
-
close
-
button
:
not
(
[
fadein
]
)
.
tabbrowser
-
tab
:
not
(
[
fadein
]
)
:
:
after
.
tab
-
background
:
not
(
[
fadein
]
)
{
visibility
:
hidden
;
}
/* ... */

