Bug 1443561 - WebExtension themes additional backgrounds alignment should be relative to the toolbox r=jaws
This patch changes alignment property of additional backgrounds to be relative to #navigator-toolbox, instead of root.

MozReview-Commit-ID: LlSZmu39u6D

UltraBlame original commit: f3e01de682f1a39c4a906423823def6f8804ad49

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -136,17 +136,6 @@ lwt
 -
 background
 -
-alignment
-:
-right
-top
-;
--
--
-lwt
--
-background
--
 tiling
 :
 no
@@ -203,57 +192,6 @@ color
 !
 important
 ;
-background
--
-image
-:
-var
-(
--
--
-lwt
--
-additional
--
-images
-)
-!
-important
-;
-background
--
-position
-:
-var
-(
--
--
-lwt
--
-background
--
-alignment
-)
-!
-important
-;
-background
--
-repeat
-:
-var
-(
--
--
-lwt
--
-background
--
-tiling
-)
-!
-important
-;
 }
 :
 root
@@ -282,16 +220,15 @@ header
 -
 image
 )
-var
-(
+!
+important
+;
+background
 -
--
-lwt
--
-additional
--
-images
-)
+position
+:
+right
+top
 !
 important
 ;
@@ -2791,6 +2728,73 @@ top
 ease
 -
 out
+;
+}
+/
+*
+Set
+additional
+backgrounds
+alignment
+relative
+to
+toolbox
+*
+/
+#
+navigator
+-
+toolbox
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+additional
+-
+images
+)
+;
+background
+-
+position
+:
+var
+(
+-
+-
+lwt
+-
+background
+-
+alignment
+)
+;
+background
+-
+repeat
+:
+var
+(
+-
+-
+lwt
+-
+background
+-
+tiling
+)
 ;
 }
 /
